# EzHero

./: .gitignore  CMakeLists.txt  ezhero.dia
data/races/: Elf.txt
include/: race.h  racialtrait.h
src/: character.cpp  race.cpp  racialtrait.cpp
test/: testrace.cpp
